// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FUJIFILM_X-S10.RAF 1`] = `
{
  "cdesc": "RGBG",
  "colors": 3,
  "dngVersion": 0,
  "filters": 9,
  "isFoveon": 0,
  "make": "Fujifilm",
  "makerIndex": 18,
  "model": "X-S10",
  "normalizedMake": "Fujifilm",
  "normalizedModel": "X-S10",
  "rawCount": 1,
  "software": "Digital Camera X-S10 Ver3.01",
  "xmpdata": "",
  "xmplen": 0,
  "xtrans": [
    [
      1,
      1,
      0,
      1,
      1,
      2,
    ],
    [
      1,
      1,
      2,
      1,
      1,
      0,
    ],
    [
      2,
      0,
      1,
      0,
      2,
      1,
    ],
    [
      1,
      1,
      2,
      1,
      1,
      0,
    ],
    [
      1,
      1,
      0,
      1,
      1,
      2,
    ],
    [
      0,
      2,
      1,
      2,
      0,
      1,
    ],
  ],
  "xtransAbs": [
    [
      1,
      1,
      0,
      1,
      1,
      2,
    ],
    [
      1,
      1,
      2,
      1,
      1,
      0,
    ],
    [
      2,
      0,
      1,
      0,
      2,
      1,
    ],
    [
      1,
      1,
      2,
      1,
      1,
      0,
    ],
    [
      1,
      1,
      0,
      1,
      1,
      2,
    ],
    [
      0,
      2,
      1,
      2,
      0,
      1,
    ],
  ],
}
`;

exports[`FUJIFILM_X-S10.RAF 2`] = `
{
  "analogbalance": [
    0,
    0,
    0,
    0,
  ],
  "aperture": 2.799999952316284,
  "artist": "",
  "desc": "NE",
  "focalLen": 50,
  "gpsdata": [
    0,
    35,
    1,
    42,
    1,
    28591,
    1000,
    139,
    1,
    23,
    1,
    22932,
    1000,
    6,
    1,
    46,
    1,
    22,
    1,
    14200,
    100,
    760432471,
    13368,
    0,
    858927154,
    976695354,
    12339,
    0,
    0,
    0,
    78,
    69,
  ],
  "isoSpeed": 160,
  "parsedGps": {
    "altitude": 22,
    "altref": 0,
    "gpsparsed": 0,
    "gpsstatus": 67,
    "gpstimestamp": [
      22.93199920654297,
      6,
      46,
    ],
    "latitude": [
      0,
      35,
      42,
    ],
    "latref": 0,
    "longitude": [
      28.590999603271484,
      139,
      23,
    ],
    "longref": 14,
  },
  "shotOrder": 0,
  "shutter": 0.0005000000237487257,
  "timestamp": 1690703923,
}
`;

exports[`FUJIFILM_X-S10.RAF 3`] = `
{
  "dng": {
    "maxAp4MaxFocal": 0,
    "maxAp4MinFocal": 0,
    "maxFocal": 0,
    "minFocal": 0,
  },
  "exifMaxAp": 2.8284270763397217,
  "focalLengthIn35mmFormat": 75,
  "internalLensSerial": "",
  "lens": "SIGMA 18-50mm F2.8 DC DN | Contemporary 021",
  "lensMake": "SIGMA   ",
  "lensSerial": "57039456",
  "makernotes": {
    "adapter": "",
    "adapterID": 0n,
    "attachment": "",
    "attachmentID": 0n,
    "body": "",
    "camID": 0n,
    "cameraFormat": 2,
    "cameraMount": 0,
    "curAp": 0,
    "curFocal": 0,
    "focalLengthIn35mmFormat": 0,
    "focalType": 0,
    "focalUnits": 0,
    "focusRangeIndex": 0,
    "lens": "��",
    "lensFStops": 0,
    "lensFeaturesPre": "",
    "lensFeaturesSuf": "",
    "lensFormat": 0,
    "lensID": 0n,
    "lensMount": 0,
    "maxAp": 0,
    "maxAp4CurFocal": 0,
    "maxAp4MaxFocal": 50,
    "maxAp4MinFocal": 18,
    "maxFocal": 0,
    "minAp": 0,
    "minAp4CurFocal": 0,
    "minAp4MaxFocal": 2.799999952316284,
    "minAp4MinFocal": 2.799999952316284,
    "minFocal": 0,
    "minFocusDistance": 0,
    "teleconverter": "",
    "teleconverterID": 0n,
  },
  "maxAp4MaxFocal": 2.799999952316284,
  "maxAp4MinFocal": 2.799999952316284,
  "maxFocal": 50,
  "minFocal": 18,
  "nikon": {
    "effectiveMaxAp": 0,
    "lensFStops": 0,
    "lensIDNumber": 0,
    "lensType": 0,
    "mcuVersion": 0,
  },
}
`;

exports[`FUJIFILM_X-S10.RAF 4`] = `
{
  "canon": {
    "activeArea": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "aeSetting": 0,
    "afMicroAdjMode": 0,
    "afMicroAdjValue": 0,
    "autoLightingOptimizer": 0,
    "averageBlackLevel": 0,
    "canonLog": 0,
    "channelBlackLevel": [
      0,
      0,
      0,
      0,
    ],
    "colorDataSubVer": 0,
    "colorDataVer": 0,
    "continuousDrive": 0,
    "defaultCropAbsolute": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "exposureMode": 0,
    "flashActivity": 0,
    "flashBits": 0,
    "flashExposureLock": 0,
    "flashGuideNumber": 0,
    "flashMeteringMode": 0,
    "flashMode": 0,
    "flashOutput": 0,
    "highlightTonePriority": 0,
    "imageStabilization": 0,
    "isoGain": [
      0,
      0,
    ],
    "leftOpticalBlack": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "makernotesFlip": 0,
    "manualFlashOutput": 0,
    "meteringMode": 0,
    "multishot": [
      0,
      0,
      0,
      0,
    ],
    "normalWhiteLevel": 0,
    "quality": 0,
    "recommendedImageArea": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "recordMode": 0,
    "rfLensID": 0,
    "sensorHeight": 0,
    "sensorWidth": 0,
    "specularWhiteLevel": 0,
    "spotMeteringMode": 0,
    "srawQuality": 0,
    "upperOpticalBlack": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "wbi": 0,
  },
  "common": {
    "afcount": 0,
    "afdata": [
      {
        "data": 0,
        "length": 0,
        "order": 0,
        "tag": 0,
        "version": 0,
      },
      {
        "data": 0,
        "length": 0,
        "order": 0,
        "tag": 0,
        "version": 0,
      },
      {
        "data": 0,
        "length": 0,
        "order": 0,
        "tag": 0,
        "version": 0,
      },
      {
        "data": 0,
        "length": 0,
        "order": 0,
        "tag": 0,
        "version": 0,
      },
    ],
    "ambientTemperature": -1000,
    "batteryTemperature": -1000,
    "cameraTemperature": -1000,
    "colorSpace": 0,
    "exifAcceleration": 0,
    "exifAmbientTemperature": -1000,
    "exifCameraElevationAngle": 0,
    "exifExposureIndex": 0,
    "exifHumidity": 0,
    "exifPressure": 0,
    "exifWaterDepth": 0,
    "exposureCalibrationShift": 0,
    "firmware": "",
    "flashEc": 0,
    "flashGn": 0,
    "lensTemperature": -1000,
    "realIso": 0,
    "sensorTemperature": -1000,
    "sensorTemperature2": -1000,
  },
  "fuji": {
    "afCSettings": 0,
    "afMode": 512,
    "autoBracketing": 0,
    "autoDynamicRange": 100,
    "blackLevel": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "brightnessCompensation": 0,
    "cropMode": 0,
    "dRangePriority": 65535,
    "dRangePriorityAuto": 0,
    "dRangePriorityFixed": 0,
    "developmentDynamicRange": 65535,
    "driveMode": 0,
    "dynamicRange": 1,
    "dynamicRangeSetting": 0,
    "expoMidPointShift": -0.7200000286102295,
    "exrMode": 0,
    "filmMode": 2048,
    "flashMode": 0,
    "focusMode": 0,
    "focusPixel": [
      2311,
      1268,
    ],
    "focusSettings": 0,
    "focusWarning": 0,
    "imageCount": 0,
    "imageStabilization": [
      0,
      2,
      1,
    ],
    "isTSNERDTS": 0,
    "macro": 0,
    "pixelShiftOffset": [
      0,
      0,
    ],
    "prioritySettings": 17,
    "rafDataGeneration": 0,
    "rafDataImageSizeTable": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "rafDataVersion": 0,
    "rafVersion": "595",
    "rating": 0,
    "sensorID": "506",
    "sequenceNumber": 0,
    "serialSignature": "",
    "seriesLength": 0,
    "shutterType": 1,
    "wbPreset": 0,
  },
  "hasselblad": {
    "baseIso": 0,
    "captureSequenceInitiator": "",
    "coatingCode": 0,
    "format": 0,
    "gain": 0,
    "hostBody": "",
    "mnColorMatrix": [
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
    ],
    "nIfdCm": [
      0,
      -1,
    ],
    "recommendedCrop": [
      -1,
      0,
    ],
    "sensor": "",
    "sensorCode": 0,
    "sensorSubCode": 0,
    "sensorUnit": "",
    "sensorUnitConnector": "",
    "uncropped": 0,
  },
  "nikon": {
    "activeDLighting": 0,
    "activeDLighting2": 0,
    "afFineTune": 0,
    "afFineTuneAdj": 0,
    "afFineTuneIndex": 0,
    "colorBalanceVersion": 0,
    "exposureBracketValue": 0,
    "exposureMode": 0,
    "exposureProgram": 0,
    "externalFlashExposureComp": [
      0,
      0,
      0,
      0,
    ],
    "externalFlashFlags": 0,
    "flashColorFilter": 0,
    "flashControlCommanderMode": 0,
    "flashExposureBracketValue": [
      0,
      0,
      0,
      0,
    ],
    "flashExposureCompensation": [
      0,
      0,
      0,
      0,
    ],
    "flashExposureCompensation2": 0,
    "flashExposureCompensation3": 0,
    "flashExposureCompensation4": 0,
    "flashFirmware": [
      0,
      0,
    ],
    "flashFocalLength": 0,
    "flashGNDistance": 0,
    "flashGroupControlMode": [
      0,
      0,
      0,
      0,
    ],
    "flashGroupOutputAndCompensation": [
      0,
      0,
      0,
      0,
    ],
    "flashInfoVersion": 0,
    "flashMode": 0,
    "flashOutputAndCompensation": 0,
    "flashSetting": "",
    "flashSource": 0,
    "flashType": "",
    "highSpeedCropFormat": 0,
    "imageStabilization": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "key": 0,
    "lensDataVersion": 0,
    "makernotesFlip": 0,
    "meGainOn": 0,
    "meWb": [
      0,
      0,
      0,
      0,
    ],
    "nMEshots": 0,
    "nefBitDepth": [
      0,
      0,
      0,
      0,
    ],
    "nefCompression": 0,
    "pitchAngle": 0,
    "rollAngle": 0,
    "sensorHeight": 0,
    "sensorHighSpeedCrop": {
      "cheight": 0,
      "cleft": 0,
      "ctop": 0,
      "cwidth": 0,
    },
    "sensorWidth": 0,
    "shootingMode": 0,
    "shotInfoVersion": 0,
    "vibrationReduction": 0,
    "vrMode": 0,
    "yawAngle": 0,
  },
  "panasonic": {
    "blackLevel": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "blackLevelDim": 0,
    "compression": 0,
    "focusStepCount": 0,
    "focusStepNear": 0,
    "gamma": 0,
    "highIsoMultiplier": [
      0,
      0,
      0,
    ],
    "lensManufacturer": 4294967295,
    "multishot": 0,
    "zoomPosition": 0,
  },
}
`;

exports[`Panasonic_S5M2X.RW2 1`] = `
{
  "cdesc": "RGBG",
  "colors": 3,
  "dngVersion": 0,
  "filters": 3031741620,
  "isFoveon": 0,
  "make": "Panasonic",
  "makerIndex": 47,
  "model": "DC-S5M2X",
  "normalizedMake": "Panasonic",
  "normalizedModel": "DC-S5M2X",
  "rawCount": 1,
  "software": "",
  "xmpdata": "",
  "xmplen": 0,
  "xtrans": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "xtransAbs": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
}
`;

exports[`Panasonic_S5M2X.RW2 2`] = `
{
  "analogbalance": [
    0,
    0,
    0,
    0,
  ],
  "aperture": 5.599999904632568,
  "artist": "",
  "desc": "",
  "focalLen": 60,
  "gpsdata": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "isoSpeed": 100,
  "parsedGps": {
    "altitude": 0,
    "altref": 0,
    "gpsparsed": 0,
    "gpsstatus": 0,
    "gpstimestamp": [
      0,
      0,
      0,
    ],
    "latitude": [
      0,
      0,
      0,
    ],
    "latref": 0,
    "longitude": [
      0,
      0,
      0,
    ],
    "longref": 0,
  },
  "shotOrder": 0,
  "shutter": 0.0007692307699471712,
  "timestamp": 1695017675,
}
`;

exports[`Panasonic_S5M2X.RW2 3`] = `
{
  "dng": {
    "maxAp4MaxFocal": 0,
    "maxAp4MinFocal": 0,
    "maxFocal": 0,
    "minFocal": 0,
  },
  "exifMaxAp": 5.641558647155762,
  "focalLengthIn35mmFormat": 60,
  "internalLensSerial": "",
  "lens": "",
  "lensMake": "",
  "lensSerial": "",
  "makernotes": {
    "adapter": "",
    "adapterID": 0n,
    "attachment": "",
    "attachmentID": 0n,
    "body": "",
    "camID": 0n,
    "cameraFormat": 0,
    "cameraMount": 0,
    "curAp": 0,
    "curFocal": 0,
    "focalLengthIn35mmFormat": 0,
    "focalType": 0,
    "focalUnits": 0,
    "focusRangeIndex": 0,
    "lens": "��",
    "lensFStops": 0,
    "lensFeaturesPre": "",
    "lensFeaturesSuf": "",
    "lensFormat": 0,
    "lensID": 0n,
    "lensMount": 0,
    "maxAp": 0,
    "maxAp4CurFocal": 0,
    "maxAp4MaxFocal": 0,
    "maxAp4MinFocal": 0,
    "maxFocal": 0,
    "minAp": 0,
    "minAp4CurFocal": 0,
    "minAp4MaxFocal": 0,
    "minAp4MinFocal": 0,
    "minFocal": 0,
    "minFocusDistance": 0,
    "teleconverter": "",
    "teleconverterID": 0n,
  },
  "maxAp4MaxFocal": 0,
  "maxAp4MinFocal": 0,
  "maxFocal": 0,
  "minFocal": 0,
  "nikon": {
    "effectiveMaxAp": 0,
    "lensFStops": 0,
    "lensIDNumber": 0,
    "lensType": 0,
    "mcuVersion": 0,
  },
}
`;

exports[`Panasonic_S5M2X.RW2 4`] = `
{
  "canon": {
    "activeArea": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "aeSetting": 0,
    "afMicroAdjMode": 0,
    "afMicroAdjValue": 0,
    "autoLightingOptimizer": 0,
    "averageBlackLevel": 0,
    "canonLog": 0,
    "channelBlackLevel": [
      0,
      0,
      0,
      0,
    ],
    "colorDataSubVer": 0,
    "colorDataVer": 0,
    "continuousDrive": 0,
    "defaultCropAbsolute": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "exposureMode": 0,
    "flashActivity": 0,
    "flashBits": 0,
    "flashExposureLock": 0,
    "flashGuideNumber": 0,
    "flashMeteringMode": 0,
    "flashMode": 0,
    "flashOutput": 0,
    "highlightTonePriority": 0,
    "imageStabilization": 0,
    "isoGain": [
      0,
      0,
    ],
    "leftOpticalBlack": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "makernotesFlip": 0,
    "manualFlashOutput": 0,
    "meteringMode": 0,
    "multishot": [
      0,
      0,
      0,
      0,
    ],
    "normalWhiteLevel": 0,
    "quality": 0,
    "recommendedImageArea": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "recordMode": 0,
    "rfLensID": 0,
    "sensorHeight": 0,
    "sensorWidth": 0,
    "specularWhiteLevel": 0,
    "spotMeteringMode": 0,
    "srawQuality": 0,
    "upperOpticalBlack": {
      "b": 0,
      "l": 0,
      "r": 0,
      "t": 0,
    },
    "wbi": 0,
  },
  "common": {
    "afcount": 0,
    "afdata": [
      {
        "data": 0,
        "length": 0,
        "order": 0,
        "tag": 0,
        "version": 0,
      },
      {
        "data": 0,
        "length": 0,
        "order": 0,
        "tag": 0,
        "version": 0,
      },
      {
        "data": 0,
        "length": 0,
        "order": 0,
        "tag": 0,
        "version": 0,
      },
      {
        "data": 0,
        "length": 0,
        "order": 0,
        "tag": 0,
        "version": 0,
      },
    ],
    "ambientTemperature": -1000,
    "batteryTemperature": -1000,
    "cameraTemperature": -1000,
    "colorSpace": 0,
    "exifAcceleration": 0,
    "exifAmbientTemperature": -1000,
    "exifCameraElevationAngle": 0,
    "exifExposureIndex": 0,
    "exifHumidity": 0,
    "exifPressure": 0,
    "exifWaterDepth": 0,
    "exposureCalibrationShift": 0,
    "firmware": "",
    "flashEc": 0,
    "flashGn": 0,
    "lensTemperature": -1000,
    "realIso": 0,
    "sensorTemperature": -1000,
    "sensorTemperature2": -1000,
  },
  "fuji": {
    "afCSettings": 0,
    "afMode": 65535,
    "autoBracketing": 0,
    "autoDynamicRange": 65535,
    "blackLevel": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "brightnessCompensation": 0,
    "cropMode": 0,
    "dRangePriority": 65535,
    "dRangePriorityAuto": 0,
    "dRangePriorityFixed": 0,
    "developmentDynamicRange": 65535,
    "driveMode": 0,
    "dynamicRange": 65535,
    "dynamicRangeSetting": 65535,
    "expoMidPointShift": -999,
    "exrMode": 0,
    "filmMode": 65535,
    "flashMode": 65535,
    "focusMode": 65535,
    "focusPixel": [
      65535,
      65535,
    ],
    "focusSettings": 0,
    "focusWarning": 65535,
    "imageCount": 0,
    "imageStabilization": [
      65535,
      65535,
      65535,
    ],
    "isTSNERDTS": 0,
    "macro": 0,
    "pixelShiftOffset": [
      0,
      0,
    ],
    "prioritySettings": 0,
    "rafDataGeneration": 0,
    "rafDataImageSizeTable": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "rafDataVersion": 0,
    "rafVersion": "",
    "rating": 0,
    "sensorID": "",
    "sequenceNumber": 0,
    "serialSignature": "",
    "seriesLength": 0,
    "shutterType": 65535,
    "wbPreset": 0,
  },
  "hasselblad": {
    "baseIso": 0,
    "captureSequenceInitiator": "",
    "coatingCode": 0,
    "format": 0,
    "gain": 0,
    "hostBody": "",
    "mnColorMatrix": [
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
    ],
    "nIfdCm": [
      0,
      -1,
    ],
    "recommendedCrop": [
      -1,
      0,
    ],
    "sensor": "",
    "sensorCode": 0,
    "sensorSubCode": 0,
    "sensorUnit": "",
    "sensorUnitConnector": "",
    "uncropped": 0,
  },
  "nikon": {
    "activeDLighting": 0,
    "activeDLighting2": 0,
    "afFineTune": 0,
    "afFineTuneAdj": 0,
    "afFineTuneIndex": 0,
    "colorBalanceVersion": 0,
    "exposureBracketValue": 0,
    "exposureMode": 0,
    "exposureProgram": 0,
    "externalFlashExposureComp": [
      0,
      0,
      0,
      0,
    ],
    "externalFlashFlags": 0,
    "flashColorFilter": 0,
    "flashControlCommanderMode": 0,
    "flashExposureBracketValue": [
      0,
      0,
      0,
      0,
    ],
    "flashExposureCompensation": [
      0,
      0,
      0,
      0,
    ],
    "flashExposureCompensation2": 0,
    "flashExposureCompensation3": 0,
    "flashExposureCompensation4": 0,
    "flashFirmware": [
      0,
      0,
    ],
    "flashFocalLength": 0,
    "flashGNDistance": 0,
    "flashGroupControlMode": [
      0,
      0,
      0,
      0,
    ],
    "flashGroupOutputAndCompensation": [
      0,
      0,
      0,
      0,
    ],
    "flashInfoVersion": 0,
    "flashMode": 0,
    "flashOutputAndCompensation": 0,
    "flashSetting": "",
    "flashSource": 0,
    "flashType": "",
    "highSpeedCropFormat": 0,
    "imageStabilization": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "key": 0,
    "lensDataVersion": 0,
    "makernotesFlip": 0,
    "meGainOn": 0,
    "meWb": [
      0,
      0,
      0,
      0,
    ],
    "nMEshots": 0,
    "nefBitDepth": [
      0,
      0,
      0,
      0,
    ],
    "nefCompression": 0,
    "pitchAngle": 0,
    "rollAngle": 0,
    "sensorHeight": 0,
    "sensorHighSpeedCrop": {
      "cheight": 0,
      "cleft": 0,
      "ctop": 0,
      "cwidth": 0,
    },
    "sensorWidth": 0,
    "shootingMode": 0,
    "shotInfoVersion": 0,
    "vibrationReduction": 0,
    "vrMode": 0,
    "yawAngle": 0,
  },
  "panasonic": {
    "blackLevel": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "blackLevelDim": 0,
    "compression": 0,
    "focusStepCount": 0,
    "focusStepNear": 0,
    "gamma": 2.47265625,
    "highIsoMultiplier": [
      256,
      256,
      256,
    ],
    "lensManufacturer": 4294967295,
    "multishot": 0,
    "zoomPosition": 0,
  },
}
`;
